[project]
name = "claude-slack-bot"
version = "0.1.0"
description = "Slack bot that drives a persistent local Claude Code process per thread."
requires-python = ">=3.11"
dependencies = [
    "slack-bolt>=1.20.0",
    "ably>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]

[tool.uv]
package = false
