[project]
name = "claude-slack-bot"
version = "0.1.0"
description = "Slack user-agent that drives a persistent local Claude Code process per thread, acting as a real user."
requires-python = ">=3.11"
dependencies = [
    "slack-sdk>=3.27.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "claude-agent-sdk>=0.1.0",
]

[tool.uv]
package = false
